# otus_algo

./: CMakeLists.txt
02_lucky/: lucky.py  lucky_jun.py  runtest.sh
03_algebra/: jun.py
06_sort_simple/: jun.py
python/: potter.py
